[package]
name = "my-powdr-host"
version = "0.1.0"
edition = "2021"

[dependencies]
powdr = { path = "../powdr_branch/powdr", features = ["plonky3", "plonky3-simd"] }
powdr-plonky3 = { path = "../powdr_branch/plonky3", features = ["nightly-features"] }
powdr-riscv-executor = { path = "../powdr_branch/riscv-executor" }


serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
  "rc",
] }
serde_cbor = { version = "0.11.2", default-features = false, features = [
  "alloc",
] }
bincode = "1.3.3"

env_logger = "0.10.2"
log = "0.4.17"

[profile.release]
debug = true
