[package]
name = "plonky3_recursion"
version = "0.1.0"
edition = "2021"

[dependencies]
powdr-riscv-runtime = { path = "../../powdr_branch/riscv-runtime", features = [
  "std",
  "getrandom",
] }
powdr-plonky3 = { path = "../../powdr_branch/plonky3", features = [
  "powdr-accel",
  "nightly-features",
] }
powdr-number = { path = "../../powdr_branch/number" }
indexmap = { version = "1.9.3", features = [
  "std",
] } # enabling std on indexmap since somehow it thinks we do not have std
bincode = "1.3.3"

[profile.release]
debug = true

[patch.crates-io]
# p3-goldilocks = { path = "/home/pacheco/powderlabs/Plonky3/goldilocks" }
