[package]
name = "plonky3_recursion"
version = "0.1.0"
edition = "2021"

[dependencies]
powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr.git", branch = "recursion-pacheco", features = [
  "std",
  "getrandom",
  "allow_fake_rand",
] }
powdr-plonky3 = { git = "https://github.com/powdr-labs/powdr.git", branch = "recursion-pacheco", features = [
  "powdr-accel",
  "nightly-features",
] }
powdr-number = { git = "https://github.com/powdr-labs/powdr.git", branch = "recursion-pacheco" }
indexmap = { version = "1.9.3", features = [
  "std",
] } # enabling std on indexmap since somehow it thinks we do not have std
bincode = "1.3.3"

[profile.release]
debug = true

# [patch.'https://github.com/pacheco/Plonky3.git']
# p3-goldilocks = { git = "https://github.com/pacheco/Plonky3.git", branch = "powdr-accel" }
# p3-goldilocks = { path = "/home/pacheco/powderlabs/Plonky3/goldilocks" }
